name:                SQLConverter
version:             0.1.0.0
license-file:        LICENSE
author:              nixorn
maintainer:          a-kanev@yandex.ru
build-type:          Simple
cabal-version:       >=1.10

  
library

  exposed-modules:
    Database.SQL.SQLConverter.IOFunctions
    , Database.SQL.SQLConverter.Functions
    , Database.SQL.SQLConverter.Types
    , Database.SQL.SQLConverter.NaiveSqlTypes
     

  build-depends:
    base
    , attoparsec
    , bytestring
    , utf8-string
    , text
    , containers
    , fgl
    , fgl-visualize

  default-language:    Haskell2010


--executable SQLConverter
--  main-is: Main.hs            
--  other-modules:    TestStuff
--  build-depends:       
--    base >=4.7 && <4.8
--    , hflags
--    , SQLConverter
--  default-language:    Haskell2010 
